# pupil_detection

./: .gitmodules  README.md
VOCUS2_ROS/: CMakeLists.txt  package.xml
VOCUS2_ROS/launch/: pr2_vocus2.launch
VOCUS2_ROS/msg/: forDemo.msg
VOCUS2_ROS/scripts/: pr2_look_around.py
VOCUS2_ROS/src/: HelperFunctions.cpp  VOCUS2.cpp  VOCUS_ROS.cpp  VOCUS_ROS.h  myEMD.h  vocus2_ros_node.cpp
detectron2_ros/launch/: detectron2_ros.launch
detectron2_ros/src/: detectron2_ros
myPupilLab/: CMakeLists.txt  package.xml
myPupilLab/launch/: fulleyegaze.launch  tabulate.launch
myPupilLab/msg/: GazeInfoBino.msg  GazeInfoBino_Array.msg  GazeInfoMono.msg  PupilInfo_2d.msg  PupilInfo_3d.msg  Result.msg  WorldCameraImage.msg
myPupilLab/scripts/: blinkPub.py  detectron2_result.py  gazeBinoSub.py  gazeMonoSub.py  gazePub.py  mytest_sub.py  parser.py  pupilPub.py  pupilSub.py  tabResults.cpp  testBridge.py  testDilate.py  visualizer.py  worldCameraPub.py
